--- a/orbit/bin/dune
+++ b/orbit/bin/dune
@@ -1,4 +1,4 @@
 (executable
- (public_name orbit)
- (name main)
- (libraries orbit))
+ (public_name project_1_431)
+ (name Plotting_updated)
+ (libraries oplot))
