--- a/orbit/dune-project
+++ b/orbit/dune-project
@@ -1,4 +1,4 @@
-(lang dune 3.16)
+(lang dune 3.14)
 
 (name orbit)
 
@@ -22,5 +22,20 @@
  (depends ocaml dune)
  (tags
   (topics "to describe" your project)))
+
+(package
+ (name oplot)
+ (synopsis "Mathematical plotter library for ocaml")
+ (description "High-quality plotting of 2D usual mathematical functions, including animations and LaTeX formulas. Supports also 3D surfaces with interactive rotating.")
+ (tags ("plot" "2D" "3D" "math"))
+ (depends
+  (tsdl-image (>= 0.3.0))
+  (tsdl-ttf (>= 0.3)) 
+  (tsdl (>= 0.9.6))
+  (lablgl (>= 1.06))
+  (graphics (>= 4.05.0))
+  (ocaml (>= 4.05.0))
+  (dune (>= 1.11))))
+
 
 ; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
